Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.0.0, Lustre 2.1.0
-
None
-
3
-
15,599
-
4829
Description
Since Lustre 2.0, Lustre include has macros to read flags from HSM changelog records.
There are buggy.
The attached patch fixes them.
Attachments
Issue Links
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....